[package]
name = "cargo-debug"
description = "a subcommand for cargo to launch a debugger with the generated output file"
version = "0.3.0"
authors = ["Ryan Kurte <ryankurte@gmail.com>"]
repository = "https://github.com/ryankurte/cargo-debug"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
log = "0.4.6"
simplelog = "0.5.3"
cargo_metadata = "0.7.4"
ctrlc = { version="3.1.1", features=["termination"] }
vswhere = { git = "https://github.com/DrChat/vswhere-rs.git" }
anyhow = "1.0.65"
clap = "4.0.24"
